syntax = "proto3";

option go_package = "calculator_project/internal/orchestrator/grpc";

// Сервис калькулятора, предоставляющий методы для взаимодействия Оркестратора и Агентов.
service CalculatorService {
  // Метод для получения задачи Агентом.
  rpc GetTask (TaskRequest) returns (TaskResponse);

  // Метод для отправки результата вычисления задачи Агентом.
  rpc SubmitResult (ResultRequest) returns (ResultResponse);

  // TODO: Добавить методы для управления пользователями (регистрация, аутентификация)?
  // TODO: Добавить методы для получения статуса и результатов выражений?
}

// TaskRequest: Запрос от Агента для получения задачи.
message TaskRequest {
    string agent_id = 1; // Идентификатор агента, запрашивающего задачу
    // TODO: Добавить другую информацию об агенте, если нужно.
}

// TaskResponse: Ответ Оркестратора на запрос задачи.
message TaskResponse {
    bool no_task = 1; // Если true, задач для агента пока нет
    Task task = 2;    // Данные задачи, если no_task = false
}

// Task: Структура, представляющая вычислительную задачу, выдаваемую Агенту.
message Task {
  string id = 1; // Уникальный ID задачи
  string operation = 2; // Тип операции ("+", "-", "*", "/") или "number"
  string arg1 = 3; // Первый аргумент (число в виде строки или ID задачи-зависимости)
  string arg2 = 4; // Второй аргумент (число в виде строки или ID задачи-зависимости)
  int64 duration_ms = 5; // <-- ДОБАВЛЯЕМ ЭТО НОВОЕ ПОЛЕ для времени выполнения в миллисекундах
}

// ResultRequest: Запрос от Агента для отправки результата вычисления.
message ResultRequest {
  string task_id = 1; // ID задачи, результат которой отправляется
  double result = 2; // Результат вычисления
  bool success = 3; // Флаг успешности
  string error_message = 4; // Сообщение об ошибке
}

// ResultResponse: Ответ Оркестратора на отправку результата.
message ResultResponse {
  bool received = 1; // Подтверждение получения результата Оркестратором
}

// TODO: Добавить сообщения для управления пользователями.
// TODO: Добавить сообщения для запроса/ответа по статусам выражений.